# bengal

./: Cargo.toml  README.md  autoinstall.sh  tests.bl  tests.sh
.github/workflows/: build_artifacts.yml  build_releases.yml  ci.yml  linux.yml  native.yml
bytecode-viewer/: Cargo.toml
bytecode-viewer/src/: lib.rs
compiler/: Cargo.toml
docker/: Dockerfile
docs/: LANGUAGE_REFERENCE.md  guide.html  index.html  reference.html  std-lib.html
example/: 01_hello_world.bl  02_module_test.bl  10_all_features.bl  111_new_line.bl  11_casting.bl  11_class.bl  123_password_generator.bl  12_class.bl  13_interface.bl  20_async_test.bl  22_http_client.bl  24_block_comments.bl  25_loops.bl  27_multiline_strings.bl  28_try_catch.bl  29_nested_try_catch.bl  30_env_test.bl  32_nested_exception.bl  33_nested_stack.bl  36_inc_dec.bl  37_continue.bl  38_debug_test.bl  40_native_class.bl  41_shebang.bl  42_arrays.bl  43_generics_test.bl  44_math_test.bl  45_args_simple.bl  45_args_test.bl  46_array_add_test.bl  47_fibonacci.bl  48_overloading.bl  49_math_simple_test.bl  49_static_members.bl  49_static_simple.bl  52_functions.bl  52_unit_test.bl  53_checks.bl  53_power_operator.bl  54_checks.bl  (+7 more)
sparkler/: Cargo.toml
src/: bytecode_viewer.rs  main.rs  repl.rs
std/: Cargo.toml  args.bl  builtin.bl  data.bl  ffi.bl  flag.bl  fs.bl  http.bl  io.bl  lib.bl  map.bl  math.bl  shell.bl  sys.bl  test.bl
test/: 01_math_test.bl  02_array_test.bl  03_string_test.bl  04_class_test.bl  05_loop_test.bl  06_exception_test.bl  07_numeric_test.bl  08_comprehensive_test.bl  09_safety_test.bl
(+41 files in other folders)
