[workspace]
resolver = "2"
members = [
    "compiler",
    "sparkler",
    "std",
    "bytecode-viewer",
    ".",
]

[package]
name = "bengal-cli"
version = "0.1.0"
edition = "2021"
description = "Bengal language CLI"

[[bin]]
name = "bengal"
path = "src/main.rs"

[dependencies]
bengal-compiler = { path = "compiler" }
sparkler = { path = "sparkler" }
bytecode-viewer = { path = "bytecode-viewer" }
bengal-std = { path = "std" }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
rustyline = "14"
